Automated running checkstyle during build. Fixed several minor Checkstyle and Findbugs issues